# ai-first-engineering-under-ambiguity

./: .dockerignore  .env.example  .env.local.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  AGENT_RULES.md  Dockerfile  GEMINI.md  Makefile  PLAN.md  PROJECT_PLAN.md  README.md  Tiltfile  cli  cspell.config.yaml  langgraph.json  pyproject.toml
app/: config.py
app/entities/: case_summary.py  claim_intake_bundle.py  routing_decision.py  triage_result.py
app/use_cases/: assess_completeness_uc.py  decide_triage_disposition_uc.py  detect_ambiguity_uc.py  extract_document_facts_uc.py  generate_escalation_rationale_uc.py  generate_follow_up_message_uc.py  generate_hitl_review_task_uc.py  generate_requirements_checklist_uc.py  normalize_claim_bundle_uc.py  protocols.py  tokenize_pii_for_model_uc.py
deploy/local/: compose.yaml  k8s.yaml
docs/: patterns.md
docs/references/: insurance-processes.md
drivers/api/: config.py  dependencies.py  main.py
drivers/cli/: README.md  __init__.py  __main__.py  config.py  main.py
drivers/ui/: config.py
plan/: _insurance-process-decisions.md  death-claim-process-understanding.md  death-claim-steel-thread.md  death-claim-tree-a-code-map.md  death-claim-tree-a-worked-example.md  death-claim-workshop-spec.md  synthetic-data-plan.md
plan/death-claim/: deferred-hardening.md  process-understanding.md  (+5 more)
scripts/: compile_dspy_guardrail.py
templates/: README.md
tests/: conftest.py
tools/: format-markdown.cjs  format-tables.cjs  precommit_manage_staged_files.sh  prepare-rancher-desktop.sh
(+128 files in other folders)
